<resources>
    <string name="app_name">MovieApp</string>
    <string name="title_search">Search</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="title_favorites">Favorites</string>
    <string name="search_here">Search here</string>
    <string name="rating">Rating</string>
    <string name="language">Language</string>
    <string name="length">Length</string>
    <string name="description">Description</string>
    <string name="cast">Cast</string>
    <string name="imdb">/10 IMDB</string>
    <string name="unknownError">Unknown Error</string>
    <string name="Title">Reminder</string>
    <string name="Scheduled">Reminder scheduled</string>
    <string name="default_message">You scheduled to watch : </string>
    <string name="cantSave">Can not save</string>
    <string name="pleaseWait">Please Wait</string>
    <string name="addedToDB">Added Successfully</string>
    <string name="remove">X</string>
    <string name="favorites">Favorite</string>
    <string name="watchLater">Watch Later</string>
    <string name="cantLoad">Can not load</string>
    <string name="soon">SOON</string>
    <string name="remind_me">Remind me</string>
    <string name="channelID">Reminder</string>
    <string name="warning">Notifications will not work on your device</string>
    <string name="trailer">Trailer</string>
    <string name="onlyMovieHasTrailer">Trailer is not available for TV Series</string>
    <string name="trailerNotAvailable">Trailer is not available</string>
    <string name="actorsNotAvailable">Actor list is not available</string>
    <string name="genresNotAvailable">Genre list is not available</string>
    <string name="detailsNotAvailable">Details are not available</string>
    <string name="nothing_to_show_yet">Nothing To Show Yet</string>
</resources>