<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.ui.movieDetails.MovieDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/coverIV"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="-20dp"
            android:background="@drawable/custom_white_view_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline1"
            app:layout_constraintVertical_bias="0.05" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/mulish_regular"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/watchLater"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/guideline1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save"
            android:layout_width="90dp"
            android:layout_height="20dp"
            android:background="@drawable/save_button_background"
            android:text="@string/favorites"
            android:textColor="@color/white"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@id/guideline3"
            app:layout_constraintTop_toBottomOf="@id/guideline1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/watchLater"
            android:layout_width="90dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/save_button_background"
            android:text="@string/watchLater"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@id/guideline3"
            app:layout_constraintTop_toBottomOf="@id/save" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/backButton"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_baseline_arrow_back"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/starIcon"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_star"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/titleTV" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/imdbRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="6dp"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/starIcon"
            app:layout_constraintTop_toBottomOf="@id/titleTV" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/mulish_regular"
            android:text="@string/imdb"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/imdbRating"
            app:layout_constraintTop_toBottomOf="@id/titleTV" />

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/flexbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:flexDirection="row"
            app:justifyContent="flex_start"
            app:layout_constraintEnd_toEndOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/starIcon">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/genreTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_blue_background"
                android:paddingHorizontal="10dp"
                android:textColor="#88A4E8"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/imdbRating" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/genre2TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/custom_blue_background"
                android:paddingHorizontal="10dp"
                android:textColor="#88A4E8"
                android:textSize="18sp"
                android:visibility="invisible"
                app:layout_constraintStart_toEndOf="@id/genreTV"
                app:layout_constraintTop_toBottomOf="@id/imdbRating" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/genre3TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/custom_blue_background"
                android:paddingHorizontal="10dp"
                android:textColor="#88A4E8"
                android:textSize="18sp"
                android:visibility="invisible"
                app:layout_constraintStart_toEndOf="@id/genre2TV"
                app:layout_constraintTop_toBottomOf="@id/imdbRating" />

        </com.google.android.flexbox.FlexboxLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/languageTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/language"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/flexbox" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lengthTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/length"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/flexbox" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ratingTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/rating"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/guideline3"
            app:layout_constraintTop_toBottomOf="@id/flexbox" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/languageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxWidth="120dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/languageTV" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lengthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/lengthTV"
            app:layout_constraintTop_toBottomOf="@id/lengthTV" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ratingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/ratingTV"
            app:layout_constraintTop_toBottomOf="@id/lengthTV" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/descriptionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/merriweather_black"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/languageTextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxHeight="150dp"
            android:textColor="@color/grey"
            app:layout_constraintEnd_toEndOf="@id/guideline3"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/descriptionHeader" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/castHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/merriweather_black"
            android:text="@string/cast"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/description" />

        <ProgressBar
            android:id="@+id/actorsProgressBar"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toEndOf="@id/castHeader"
            app:layout_constraintTop_toBottomOf="@id/description" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/actors_recycler_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxHeight="50dp"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/castHeader" />

        <ProgressBar
            android:id="@+id/main_progress_bar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/trailerHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/merriweather_black"
            android:text="@string/trailer"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/actors_recycler_view" />

        <ProgressBar
            android:id="@+id/trailerProgressBar"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toEndOf="@id/trailerHeader"
            app:layout_constraintTop_toBottomOf="@id/actors_recycler_view" />

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/ytVideoView"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/guideline3"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/trailerHeader" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="254dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>